src/test/deca/context/invalid/sansObj/et-binaire-string.deca
// Description:
//          Utilisation de l'opérateur && avec un int et un bool
//
// Résultat:
//Le terme de droite n'est pas un booléen
//
{
    boolean a = true;
    boolean c = (a && "non-booléen");
}